--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="" en-us>
+<html lang="en-us">
 
 <head>
-    <meta charset="utf-8>
-        <meta name=" viewport" content="width=device-width,initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>"Annie Carver | WWD 130"</title>
 </head>
 
@@ -19,22 +19,23 @@
         <h1>Annie Carver | WWD 130</h1>
         <img src="images/profile.jpeg" alt="Hello, my name is Annie Carver" width="200">
         <p>
-            "Here is a long paragraph about river rafting.
-            Wear a life jacket.
+            "When you go on the river,
+            wear a life jacket.
             I once had search and rescue called beacuse I
             tipped over in kayak and my upside down kayak floated down
-            the Provo River."
+            the Provo River.
+            Because I wore my life-jacket I am alive today.
+            I live near Seattle, Washington with my sweet husband and five
+            beautiful children, and a dog."
         </p>
 
 
 
     </main>
     <footer>
-        <p>&copy 2025 Annie Carver USA Washington</p>
+        <p>&copy; 2025🌳 Annie Carver🌳 USA🌳 Washington</p>
 
     </footer>
 </body>
-
-</html>
 
 </html>
