--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -18,16 +18,8 @@
     </header>
     <nav>
         <u1>
-            <li>
-                <a href="King County Library">
-                    <kcls class="org"></kcls>
-                </a>
-            </li>
-            <li>
-                <a href="Kamiakin Middle School">
-                    <kams class="org"></kams>
-                </a>
-            </li>
+            <li><a href="King County Library"><kcls class="org"></kcls></a></li>
+            <li><a href="Kamiakin Middle School"><kams class="org"></kams></a></li>
         </u1>
     </nav>
     <main>
