web page address

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -18,12 +18,8 @@
     </header>
     <nav>
         <u1>
-            <li><a href="King County Library">
-                    <kcls class="org"></kcls>
-                </a></li>
-            <li><a href="Kamiakin Middle School">
-                    <kams class="org"></kams>
-                </a></li>
+            <li><a href="kcls.org">King County Library"</a></li>
+            <li><a href="kams.org">Kamiakin Middle School"</kams></a></li>
         </u1>
     </nav>
     <main>
