correcting email address

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -19,7 +19,7 @@
     <nav>
         <u1>
             <li><a href="kcls.org">King County Library"</a></li>
-            <li><a href="kams.org">Kamiakin Middle School"</a></li>
+            <li><a href="kams.lwsd.org">Kamiakin Middle School"</a></li>
         </u1>
     </nav>
     <main>
