fixed web pages

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -18,8 +18,8 @@
     </header>
     <nav>
         <ul>
-            <li><a href="kcls.org">King County Library!</a></li>
-            <li><a href="kams.lwsd.org">Kamiakin Middle School</a></li>
+            <li><a href="https://kcls.org">King County Library!</a></li>
+            <li><a href="https://kams.lwsd.org">Kamiakin Middle School</a></li>
         </ul>
     </nav>
     <main>
