--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -18,7 +18,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="https://kcls.org">King County Library!</a></li>
+            <li><a href="https://kcls.org">King County Library</a></li>
             <li><a href="https://kams.lwsd.org">Kamiakin Middle School</a></li>
         </ul>
     </nav>
