--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>"Annie Carver | WWD 130"</title>
+    <meta name="description" content="Here is my homepage for my Web Develpment Class. My name is Annie Carver. The purpose of this page is to show off my web development skills."
+    <meta name="author" content="Annie Carver"
     <link rel="stylesheet" href="styles/styles.css"> 
 </head>
 
@@ -33,6 +35,15 @@
 
 
     </main>
+    <asside> 
+        <h2>
+            I live in Washington, the evergreen state.
+        </h2>
+        <img src="images/evergreen.jpg" alt="Washington landscape">
+        <p>I live in a city near Seattle.  We have a lot of trees and several lakes.  
+            Winters are gray and wet, but the summer is beautiful.
+        </p>
+    </asside>
     <footer>
         <p>&copy; 2025🌳 Annie Carver🌳 USA🌳 Washington</p>
 
