--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>"Annie Carver | WWD 130"</title>
-    <meta name="description" content="Here is my homepage for my Web Develpment Class. My name is Annie Carver. The purpose of this page is to show off my web development skills."
-    <meta name="author" content="Annie Carver"
-    <link rel="stylesheet" href="styles/styles.css"> 
+    <meta name="description" content="Here is my homepage for my Web Develpment Class. My name is Annie Carver. The purpose of this page is to show off my web development skills.">
+    <meta name="author" content="Annie Carver">
+    <link> rel="stylesheet" href="styles/styles.css"  
 </head>
 
 <body>
