--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>"Annie Carver | WWD 130"</title>
     <meta name="description" content="Here is my homepage for my Web Develpment Class. My name is Annie Carver. The purpose of this page is to show off my web development skills.">
     <meta name="author" content="Annie Carver">
-    <link> rel="stylesheet" href="styles/styles.css"  
+    <link> rel="stylesheet" 
 </head>
 
 <body>
