--- a/week03/wireframe.html
+++ b/week03/wireframe.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <div class+"logo-box">
+        <div class="logo-box">
             <img src="https://placehold.co/75/75/fish" alt="logo">
         </div>
         <nav>
@@ -20,59 +20,59 @@
     <main>
         <div class="banner-box">
             <section class="banner">
-                <img src="https://placehold.co/100/300/horses" alt="banner image description"
+                <img src="https://placehold.co/100/300/horses" alt="banner image description">
                 <h2>Banner 1 Title</h2>
                 <p>Banner 1 text paragraph</p>
             </section>
             <section class="banner">
-                <img src="https://placehold.co/100/300/horses" alt="banner image description"
+                <img src="https://placehold.co/100/300/horses" alt="banner image description">
                 <h2>Banner 2 Title</h2>
                 <p>Banner 2 text paragraph</p>
             </section>
             <section class="banner">
-                <img src="https://placehold.co/100/300/horses" alt="banner image description"
+                <img src="https://placehold.co/100/300/horses" alt="banner image description">
                 <h2>Banner 3 Title</h2>
                 <p>Banner 3 text paragraph</p>
             </section>
         </div>
         <div id="product-gallery">
             <section class="product">
-                <img src="https://placehold.co/250/250/trees" alt="banner image description"
+                <img src="https://placehold.co/250/250/trees" alt="banner image description">
                 <h2>Product 1 Title</h2>
                 <p>Product 1 text paragraph</p>
             </section>
             <section class="product">
-                <img src="https://placehold.co/250/250/trees" alt="banner image description"
+                <img src="https://placehold.co/250/250/trees" alt="banner image description">
                 <h2>Product 1 Title</h2>
                 <p>Product 1 text paragraph</p>
             </section>
             <section class="product">
-                <img src="https://placehold.co/250/250/trees" alt="banner image description"
+                <img src="https://placehold.co/250/250/trees" alt="banner image description">
                 <h2>Product 1 Title</h2>
                 <p>Product 1 text paragraph</p>
             </section>
             <section class="product">
-                <img src="https://placehold.co/250/250/trees" alt="banner image description"
+                <img src="https://placehold.co/250/250/trees" alt="banner image description">
                 <h2>Product 1 Title</h2>
                 <p>Product 1 text paragraph</p>
             </section>
             <section class="product">
-                <img src="https://placehold.co/250/250/trees" alt="banner image description"
+                <img src="https://placehold.co/250/250/trees" alt="banner image description">
                 <h2>Product 1 Title</h2>
                 <p>Product 1 text paragraph</p>
             </section>
             <section class="product">
-                <img src="https://placehold.co/250/250/trees" alt="banner image description"
+                <img src="https://placehold.co/250/250/trees" alt="banner image description">
                 <h2>Product 1 Title</h2>
                 <p>Product 1 text paragraph</p>
             </section>
             <section class="product">
-                <img src="https://placehold.co/250/250/trees" alt="banner image description"
+                <img src="https://placehold.co/250/250/trees" alt="banner image description">
                 <h2>Product 1 Title</h2>
                 <p>Product 1 text paragraph</p>
             </section>
             <section class="product">
-                <img src="https://placehold.co/250/250/trees" alt="banner image description"
+                <img src="https://placehold.co/250/250/trees" alt="banner image description">
                 <h2>Product 1 Title</h2>
                 <p>Product 1 text paragraph</p>
             </section>
