--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,24 +25,24 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/rapids_small.jpg" alt="...">
+            <img class="rapids" src="images/rapids_small.jpg" alt="...">
             <h1>White Water Rafting Company Name</h1>
             <article>
-                <img src="images/rafting12_1024_small.jpg" alt="...">
+                <img class="employee" src="images/employee_pict_1.jpg" alt="..." >
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
                 fugiat nulla</p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
             <img src="images/beauty_small.jpg" alt="...">
             <img src="images/rafts_small.jpg" alt="rafts">
