--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,7 +26,7 @@
     <main>
         <div class="hero">
             <img class="rapids" src="images/rapids_small.jpg" alt="...">
-            <h1>White Water Rafting Company Name</h1>
+            <h1>White Water Rafting Adventures</h1>
             <article>
                 <img class="employee" src="images/employee_pict_1.jpg" alt="..." >
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
