--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,7 +28,7 @@
             <img class="rapids" src="images/rapids_small.jpg" alt="...">
             <h1>White Water Rafting Adventures</h1>
             <article>
-                <img class="employee" src="images/employee_pict_1.jpg" alt="..." >
+                <img class="employee" src="images/employee_pict_1.jpg" alt="...">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -37,6 +37,11 @@
         </div>
         <section class="history">
             <h2>History</h2>
+            <img src="images/rapids_small.jpg" alt="...">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
