--- a/wwr/about.html
+++ b/wwr/about.html
@@ -40,20 +40,25 @@
             <img src="images/rapids_small.jpg" alt="...">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla</p>
+                ex ea commodo consequat. </p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla</p>
+                ex ea commodo consequat. </p>
         </section>
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/beauty_small.jpg" alt="...">
-            <img src="images/rafts_small.jpg" alt="rafts">
-            <img src="images/splash_small.jpg" alt="...">
-            <img src="images/happy_customer_small.jpg" alt="...">
-            <img src="images/boat_mountains.jpg" alt="...">
+            <div class="rowofimages">
+                <img src="images/beauty_small.jpg" alt="...">
+                <figcaption>Half-day Adventure</figcaption>
+                <img src="images/rafts_small.jpg" alt="rafts">
+                <figcaption>Overnight Thrills!</figcaption>
+                <img src="images/splash_small.jpg" alt="...">
+                <figcaption>You will get Wet</figcaption>
+                <img src="images/happy_customer_small.jpg" alt="...">
+                <figcaption>Over the Falls Adventure</figcaption>
+                <img src="images/boat_mountains.jpg" alt="...">
+                <figcaption>The Gorge</figcaption>
+            </div>
         </section>
 
     </main>
