make caption below image

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -48,16 +48,24 @@
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
             <div class="rowofimages">
-                <img src="images/beauty_small.jpg" alt="...">
-                <figcaption>Half-day Adventure</figcaption>
-                <img src="images/rafts_small.jpg" alt="rafts">
-                <figcaption>Overnight Thrills!</figcaption>
-                <img src="images/splash_small.jpg" alt="...">
-                <figcaption>You will get Wet</figcaption>
-                <img src="images/happy_customer_small.jpg" alt="...">
-                <figcaption>Over the Falls Adventure</figcaption>
-                <img src="images/boat_mountains.jpg" alt="...">
-                <figcaption>The Gorge</figcaption>
+                <div>
+                    <img src="images/beauty_small.jpg" alt="...">
+                    <figcaption>Half-day Adventure</figcaption>
+                </div>
+                <div>
+                    <img src="images/rafts_small.jpg" alt="rafts">
+                    <figcaption>Overnight Thrills!</figcaption>
+                </div>
+                <div>
+                    <img src="images/splash_small.jpg" alt="...">
+                    <figcaption>You will get Wet</figcaption>
+                </div>
+                <div><img src="images/happy_customer_small.jpg" alt="...">
+                    <figcaption>Over the Falls Adventure</figcaption>
+                </div>
+                <div><img src="images/boat_mountains.jpg" alt="...">
+                    <figcaption>The Gorge</figcaption>
+                </div>
             </div>
         </section>
 
