--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,10 +16,14 @@
     <header>
         <img src="images/rafting_logo_small.jpg" alt="logo">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
+            <div>
+                <a href="index.html">Home</a></div>
+            <div>
+                <a href="about.html">About Us</a></div>
+            <div>
+                <a href="trips.html">Trips</a></div>
+            <div>
+                <a href="contact.html">Contact Us</a></div>
 
         </nav>
     </header>
