--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>rafting adventures</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="Author" content="Annie Carver">
+    <meta name="description" content="Web development project. Includes White water rafting website">
+    <title>Whit Water Rafting Adventures</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Edu+QLD+Beginner:wght@400..700&display=swap"
