--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Author" content="Annie Carver">
     <meta name="description" content="Web development project. Includes White water rafting website">
-    <title>Whit Water Rafting Adventures</title>
+    <title>White Water Rafting Adventures</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Edu+QLD+Beginner:wght@400..700&display=swap"
@@ -19,22 +19,26 @@
         <img src="images/rafting_logo_small.jpg" alt="logo">
         <nav>
             <div>
-                <a href="index.html">Home</a></div>
+                <a href="index.html">Home</a>
+            </div>
             <div>
-                <a href="about.html">About Us</a></div>
+                <a href="about.html">About Us</a>
+            </div>
             <div>
-                <a href="trips.html">Trips</a></div>
+                <a href="trips.html">Trips</a>
+            </div>
             <div>
-                <a href="contact.html">Contact Us</a></div>
+                <a href="contact.html">Contact Us</a>
+            </div>
 
         </nav>
     </header>
     <main>
-        <div class="hero">
-            <img class="rapids" src="images/rapids_small.jpg" alt="...">
+        <div class="herodiv">
+            <img class="hero" src="images/rapids_small.jpg" alt="about to go over falls">
             <h1>White Water Rafting Adventures</h1>
             <article>
-                <img class="employee" src="images/employee_pict_1.jpg" alt="...">
+                <img class="employee" src="images/employee_pict_1.jpg" alt="smiling employee in red raft">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -43,7 +47,7 @@
         </div>
         <section class="history">
             <h2>History</h2>
-            <img src="images/rapids_small.jpg" alt="...">
+            <img src="images/rapids_small.jpg" alt="going over a small waterfall">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. </p>
@@ -55,22 +59,22 @@
             <h2>Adventure Awaits You!</h2>
             <div class="rowofimages">
                 <div>
-                    <img src="images/beauty_small.jpg" alt="...">
-                    <figcaption>Half-day Adventure</figcaption>
+                    <img src="images/beauty_small.jpg" alt="river between trees">
+                    <sub>Half-day Adventure</sub>
                 </div>
                 <div>
-                    <img src="images/rafts_small.jpg" alt="rafts">
-                    <figcaption>Overnight Thrills!</figcaption>
+                    <img src="images/rafts_small.jpg" alt="empty yellow rafts">
+                    <sub>Overnight Thrills!</sub>
                 </div>
                 <div>
-                    <img src="images/splash_small.jpg" alt="...">
-                    <figcaption>You will get Wet</figcaption>
+                    <img src="images/splash_small.jpg" alt="blue boat with big splash">
+                    <sub>You will get Wet</sub>
                 </div>
-                <div><img src="images/happy_customer_small.jpg" alt="...">
-                    <figcaption>Over the Falls Adventure</figcaption>
+                <div><img src="images/happy_customer_small.jpg" alt="red boat on rapids">
+                    <sub>Over the Falls Adventure</sub>
                 </div>
-                <div><img src="images/boat_mountains.jpg" alt="...">
-                    <figcaption>The Gorge</figcaption>
+                <div><img src="images/boat_mountains.jpg" alt="floating between steep hills">
+                    <sub>The Gorge</sub>
                 </div>
             </div>
         </section>
@@ -84,7 +88,7 @@
 
 
             <a href="https://facebook.com">
-                <img src="images/4-Facebook-128.webp" alt="Facebook">
+                <img src="images/development_facebook_logo-128.webp" alt="Facebook">
             </a>
             <a href="https://x.com">
                 <img src="images/X-128.webp" alt="X">
