--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Author" content="Annie Carver">
+    <meta name="Author" content="Annie Rebecca Carver">
     <meta name="description" content="Web development project. Includes White water rafting website">
     <title>White Water Rafting Adventures</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,8 +34,8 @@
         </nav>
     </header>
     <main>
-        <div class="herodiv">
-            <img class="hero" src="images/rapids_small.jpg" alt="about to go over falls">
+        <div class="hero">
+            <img class="heropic" src="images/rapids_small.jpg" alt="about to go over falls">
             <h1>White Water Rafting Adventures</h1>
             <article>
                 <img class="employee" src="images/employee_pict_1.jpg" alt="smiling employee in red raft">
@@ -51,9 +51,9 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. </p>
+                ex ea commodo consequat. </p> -->
         </section>
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
