--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Author" content="Annie Rebecca Carver">
+    <meta name="Author" content="Annie Carver">
     <meta name="description" content="Web development project. Includes White water rafting website">
     <title>White Water Rafting Adventures</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
