--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -32,23 +32,6 @@
         </nav>
     </header>
     <main>
-        <section class="adventure">
-            <h2>Your Guides to Adventure!</h2>
-            <div class="rowofimages">
-                <figure>
-                    <img src="images/face_one.jpg" alt="Employee">
-                    <figcaption>River Guide</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/face_two.jpg" alt="safety Officer">
-                    <figcaption>Chief Safety Officer</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/face_three" alt="Raft Maitenence">
-                    <figcaption>You will get Wet</figcaption>
-                </figure>
-            </div>
-        </section>
         <div class="hero">
             <img class="heropic" src="images/rapids_small.jpg" alt="about to go over falls">
             <h1>White Water Rafting Adventures</h1>
@@ -70,17 +53,38 @@
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. </p>
         </section>
-        
+        <section class="adventure">
+            <h2>Adventure Awaits You!</h2>
+            <div class="rowofimages">
+                <figure>
+                    <img src="images/beauty_small.jpg" alt="river between trees">
+                    <figcaption>Half-day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafts_small.jpg" alt="empty yellow rafts">
+                    <figcaption>Overnight Thrills!</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/splash_small.jpg" alt="blue boat with big splash">
+                    <figcaption>You will get Wet</figcaption>
+                </figure>
+                <figure><img src="images/happy_customer_small.jpg" alt="red boat on rapids">
+                    <figcaption>Over the Falls</figcaption>
+                </figure>
+                <figure><img src="images/boat_mountains.jpg" alt="floating between steep hills">
+                    <figcaption>The Gorge</figcaption>
+                </figure>
+            </div>
+        </section>
 
     </main>
     <footer>
         <p>
             © 2025 White Water Rafting Adventures🌳 Annie Carver🌳
         </p>
-        
         <nav class="sociallinks">
 
-            <a href="https://app.moqups.com/birMgqulc45TQRZQzpS18HksEuK6oTjf/view/page/ad12de680">link to Wireframe</a>
+
             <a href="https://facebook.com">
                 <img src="images/development_facebook_logo-128.webp" alt="Facebook">
             </a>
