--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Author" content="Annie Carver | WDD 130">
+    <meta name="Author" content="Annie Rebecca Carver | WDD 130">
     <meta name="description" content="Contact Us for white water rafting adventures with friends and family.  We are White Water Rafting Adventures">
     <title>White Water Rafting Adventures Contact Us questions</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
