--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -70,7 +70,7 @@
 
                 <input type="checkbox" id="subscribe" name="subscribe" value="subscribe">
                 <label for="subscribe">Please subscribe me to the monthly newsletter</label><br>
-                <input type="submit" value="Send Message"> 
+                <input type="Send Message" value="Send Message"> 
                               
                 </fieldset>   
             </form>
