--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Author" content="Annie Rebecca Carver | WDD 130">
     <meta name="description" content="Contact Us for white water rafting adventures with friends and family.  We are White Water Rafting Adventures">
-    <title>White Water Rafting Adventures Contact Us questions</title>
+    <title>White Water Rafting Adventures Contact Us with questions or suggestions</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Edu+QLD+Beginner:wght@400..700&display=swap"
