--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -71,7 +71,7 @@
 
                     <input type="checkbox" id="subscribe" name="subscribe" value="subscribe">
                     <label for="subscribe">Please subscribe me to the monthly newsletter</label><br>
-                    <input type="submit" value="Send Message">
+                    <button type="submit">Send Message</button>
 
                 </fieldset>
             </form>
