home page stable trips

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Annie Rebecca Carver | WDD 130">
-    <meta name="description" content="Web development project. Includes White water rafting website">
-    <title>White Water Rafting Adventures About Us review</title>
+    <meta name="description" content="Web development project. Home page Includes White water rafting website">
+    <title>White Water Rafting Adventures Home Page Come rafting with us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Edu+QLD+Beginner:wght@400..700&display=swap"
@@ -50,11 +50,11 @@
                 <input type="text" name="email_address" id="email_address">
                 
                 <button type="submit">Subscribe</button>
-
+            </fieldset>
         </section>
         <div class="join">
             <section>
-            <h3>Join us for your next vacation</h2>
+            <h3>Join us for your next vacation</h3>
             <a href="trips.html">Your next vacation starts here</a>
             </section>    
             
@@ -67,7 +67,7 @@
             <p>When our Grandpa Ralph started floating the Swallow river in 1979, he never dreamed that his legacy
                 would grow to over 100 tours a season. 
                 While the gear has changed, our commitment to a safe and exciting trip down the river has not changed. </p>
-            <img src="images/rafts_small.jpg"alt="big waves">
+            <img src="images/rafts_small.jpg" alt="big waves">
         </section>
     </main>
     <footer>
